implement a way to check for required extensions support.

--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj.filters
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="context.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="deletionQueue.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="deletionQueue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
