--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
@@ -146,10 +146,14 @@
     <ClCompile Include="context.cpp" />
     <ClCompile Include="deletionQueue.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="presentEngine.cpp" />
+    <ClCompile Include="Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.h" />
     <ClInclude Include="deletionQueue.h" />
+    <ClInclude Include="presentEngine.hpp" />
+    <ClInclude Include="Renderer.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
