create command pool and command buffers.

--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="context.cpp" />
     <ClCompile Include="deletionQueue.cpp" />
+    <ClCompile Include="engineUtils.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="presentEngine.cpp" />
@@ -153,6 +154,7 @@
   <ItemGroup>
     <ClInclude Include="context.h" />
     <ClInclude Include="deletionQueue.h" />
+    <ClInclude Include="engineUtils.h" />
     <ClInclude Include="Image.hpp" />
     <ClInclude Include="presentEngine.hpp" />
     <ClInclude Include="Renderer.hpp" />
