inlcude vma for allocations and implement creation of buffers.

--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="presentEngine.cpp" />
     <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="vkAllocator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="context.h" />
