--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
@@ -163,6 +163,8 @@
   <ItemGroup>
     <None Include="..\..\..\Users\Arbaz\source\repos\VulkanRAII\fragment.spv" />
     <None Include="..\..\..\Users\Arbaz\source\repos\VulkanRAII\vertex.spv" />
+    <None Include="shader.vert" />
+    <None Include="shader_compiler.bat" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
