--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj.filters
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj.filters
@@ -70,5 +70,11 @@
     <None Include="..\..\..\Users\Arbaz\source\repos\VulkanRAII\vertex.spv">
       <Filter>shaders</Filter>
     </None>
+    <None Include="shader.vert">
+      <Filter>shaders</Filter>
+    </None>
+    <None Include="shader_compiler.bat">
+      <Filter>shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
