--- a/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
+++ b/Another Vulkan Renderer/Another Vulkan Renderer.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClCompile Include="context.cpp" />
     <ClCompile Include="deletionQueue.cpp" />
+    <ClCompile Include="DescriptorManager.cpp" />
     <ClCompile Include="engineUtils.cpp" />
     <ClCompile Include="Image.cpp" />
     <ClCompile Include="main.cpp" />
@@ -157,6 +158,7 @@
   <ItemGroup>
     <ClInclude Include="context.h" />
     <ClInclude Include="deletionQueue.h" />
+    <ClInclude Include="DescriptorManager.hpp" />
     <ClInclude Include="engineUtils.h" />
     <ClInclude Include="Image.hpp" />
     <ClInclude Include="mesh.h" />
